# ArkPy

./: .gitignore  CONSENSUS.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
arknet_py/: __init__.py  cli.py  commit.py  compblob.py  constants.py  determinism.py  fastblob.py  rt.py  runner.py  serve.py  training.py
arknet_py/backends/: dummy_backend.py  torch_backend.py
arknet_py/training/: __init__.py  audit.py  container.py  dataset.py  exporter.py  optimizer.py  recipe.py  spec.py  trainer.py  transcript.py
arknet_py/utils/: be.py  hashing.py  iohelpers.py  json_canon.py  merkle.py  tar_canon.py
scripts/: discover_deps.py  install_arkpy.ps1  install_arkpy.py  install_arkpy.sh  test_arknet_full.sh  test_arknet_serve.sh
